test-suite/output/FixpointNoElim.v
Set Universe Polymorphism.
Inductive foo@{s;} : ğ’°@{s;Set} := XX.

Fail Fixpoint bar@{s;} (f:foo@{s;}) : True := I.
